Fixed z-index problem with map
After opening calendar the map's z-index sets to -1 and the calendar is on top

--- a/src/css/availability.css
+++ b/src/css/availability.css
@@ -67,3 +67,8 @@
     width: 100px;
     margin-right: 0.5rem;
   }
+
+  .map--under{
+    z-index: -1;
+    transition: none;
+  }
